boutique-helm/templates/redis-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "redis-cart-deployment"
  labels:
    app: "redis-cart"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "redis-cart"
  template:
    metadata:
      labels:
        app: "redis-cart"
    spec:
      containers:
      - name: "redis-cart"
        image: "docker.io/redis:latest"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: "redis-cart"
spec:
  selector:
    app: "redis-cart"
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
