boutique-helm/templates/httproute.yaml
"apiVersion": "gateway.networking.k8s.io/v1"
"kind": "HTTPRoute"
"metadata":
  "name": "boutique-prod"
"spec":
  "hostnames":
  - "senolerd.xyz"
  "parentRefs":
  - "group": "gateway.networking.k8s.io"
    "kind": "Gateway"
    "name": "public-gw"
    "namespace": "gateway-system"
  "rules":
  - "backendRefs":
    - "group": ""
      "kind": "Service"
      "name": "frontend"
      "port": 8080
      "weight": 1
    "matches":
    - "path":
        "type": "PathPrefix"
        "value": "/"
